--- a/Views/About/Index.cshtml
+++ b/Views/About/Index.cshtml
@@ -3,6 +3,7 @@
     Layout = "~/Views/Shared/HomePage.cshtml";
 }
 @model IEnumerable<_ExcellOn_.Models.MyCompany>
+
 <div class="inner-banner">
     <div class="w3l-breadcrumb">
         <div class="container">
@@ -21,6 +22,52 @@
     </div>
 </div>
 
+@*<section class="about-section py-5">
+        <div class="container py-lg-5 pt-3">
+            <div class="row">
+                <div class="col-lg-4 col-md-6">
+                    <div class="about-single p-3 d-flex justify-content-between">
+                        <div class="about-icon mr-4">
+                            <i class="fa fa-headphones" aria-hidden="true"></i>
+                        </div>
+                        <div class="about-content">
+                            <h5 class="mb-3">Any Questions</h5>
+                            <p>
+                                Excell-On boasts a young, dynamic, professional and qualified customer service staff.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="about-single p-3 d-flex justify-content-between">
+                        <div class="about-icon mr-4">
+                            <i class="fa fa-laptop" aria-hidden="true"></i>
+                        </div>
+                        <div class="about-content">
+                            <h5 class="mb-3">Online Support</h5>
+                            <p>
+                                Always online to take care of customers in the best way.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="about-single p-3 d-flex justify-content-between">
+                        <div class="about-icon mr-4">
+                            <i class="fa fa-phone" aria-hidden="true"></i>
+                        </div>
+                        <div class="about-content">
+                            <h5 class="mb-3">24/7 Call Center</h5>
+                            <p>
+                                As long as customers want, we are always there.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>*@
+
 <section class="about-section py-5">
     <div class="container py-lg-5 pt-3">
         <div class="row">
@@ -32,7 +79,8 @@
                     <div class="about-content">
                         <h5 class="mb-3">Any Questions</h5>
                         <p>
-                            Excell-On boasts a young, dynamic, professional and qualified customer service staff.
+                            Sed ut perspiciatis unde omnis iste natus error sit accusa ntium dolor emque
+                            laudan.
                         </p>
                     </div>
                 </div>
@@ -45,7 +93,8 @@
                     <div class="about-content">
                         <h5 class="mb-3">Online Support</h5>
                         <p>
-                            Always online to take care of customers in the best way.
+                            Sed ut perspiciatis unde omnis iste natus error sit accusa ntium dolor emque
+                            laudan.
                         </p>
                     </div>
                 </div>
@@ -58,7 +107,8 @@
                     <div class="about-content">
                         <h5 class="mb-3">24/7 Call Center</h5>
                         <p>
-                            As long as customers want, we are always there.
+                            Sed ut perspiciatis unde omnis iste natus error sit accusa ntium dolor emque
+                            laudan.
                         </p>
                     </div>
                 </div>
@@ -66,8 +116,7 @@
         </div>
     </div>
 </section>
-<!-- //about section -->
-<!-- about-2 section -->
+
 <section class="w3l-about-2 pb-5">
     <div class="container pb-md-5 pb-4">
         <div class="row align-items-center justify-content-between">
@@ -89,205 +138,5 @@
         </div>
     </div>
 </section>
-<!-- //about-2 section -->
-<!-- team section -->
 
-@*<section class="w3l-team py-5">
-    <div class="container py-md-5 py-4">
-        <div class="row justify-content-center">
-            <div class="col-md-8">
-                <div class="section-heading text-center mb-sm-5 mb-4">
-                    <h3 class="title-style mb-2">Meet our lovely team</h3>
-                    <p class="lead">
-                        Always listening always understanding
-                    </p>
-                </div>
-            </div>
-        </div>
 
-        <div class="row text-center">
-            <div class="col-md-2.2 row1">
-                <div class="team-block-single">
-                    <div class="team-grids">
-                        <a href="#team-single">
-                            <img src="~/Public/Image/th (2).jfif" class="img-fluid" alt="" style="width: 240px; height: 166px">
-                            <div class="team-info">
-                                <div class="social-icons-section">
-                                    <a class="fac" href="#facebook">
-                                        <span class="fa fa-facebook"></span>
-                                    </a>
-                                    <a class="twitter mx-2" href="#twitter">
-                                        <span class="fa fa-twitter"></span>
-                                    </a>
-                                    <a class="google" href="#google-plus">
-                                        <span class="fa fa-google-plus"></span>
-                                    </a>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="team-bottom-block p-4">
-                        <h5 class="member mb-1"><a href="#team" style="font-size: 1rem">Nguyễn Hoàng Sơn</a></h5>
-                        <small>Manager of Company</small>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-2.2 row1">
-                <div class="team-block-single">
-                    <div class="team-grids">
-                        <a href="#team-single">
-                            <img src="~/Public/Image/th (2).jfif" class="img-fluid" alt="" style="width: 240px; height: 166px">
-                            <div class="team-info">
-                                <div class="social-icons-section">
-                                    <a class="fac" href="#facebook">
-                                        <span class="fa fa-facebook"></span>
-                                    </a>
-                                    <a class="twitter mx-2" href="#twitter">
-                                        <span class="fa fa-twitter"></span>
-                                    </a>
-                                    <a class="google" href="#google-plus">
-                                        <span class="fa fa-google-plus"></span>
-                                    </a>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="team-bottom-block p-4">
-                        <h5 class="member mb-1"><a href="#team" style="font-size: 1rem">Lê Huy Đức</a></h5>
-                        <small>Leader-Team</small>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-2.2 mt-md-0 mt-5 row1">
-                <div class="team-block-single">
-                    <div class="team-grids">
-                        <a href="#team-single">
-                            <img src="~/Public/Image/th (2).jfif" class="img-fluid" alt="" style="width: 240px; height: 166px">
-                            <div class="team-info">
-                                <div class="social-icons-section">
-                                    <a class="fac" href="#facebook">
-                                        <span class="fa fa-facebook"></span>
-                                    </a>
-                                    <a class="twitter mx-2" href="#twitter">
-                                        <span class="fa fa-twitter"></span>
-                                    </a>
-                                    <a class="google" href="#google-plus">
-                                        <span class="fa fa-google-plus"></span>
-                                    </a>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="team-bottom-block p-4 row1">
-                        <h5 class="member mb-1"><a href="#team" style="font-size: 1rem">Bùi Văn Sinh</a></h5>
-                        <small>Manager of Company</small>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-2.2 mt-md-0 mt-5 row1">
-                <div class="team-block-single">
-                    <div class="team-grids">
-                        <a href="#team-single">
-                            <img src="~/Public/Image/th (2).jfif" class="img-fluid" alt="" style="width: 240px; height: 166px">
-                            <div class="team-info">
-                                <div class="social-icons-section">
-                                    <a class="fac" href="#facebook">
-                                        <span class="fa fa-facebook"></span>
-                                    </a>
-                                    <a class="twitter mx-2" href="#twitter">
-                                        <span class="fa fa-twitter"></span>
-                                    </a>
-                                    <a class="google" href="#google-plus">
-                                        <span class="fa fa-google-plus"></span>
-                                    </a>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="team-bottom-block p-4 row1">
-                        <h5 class="member mb-1"><a href="#team" style="font-size: 1rem">Phạm Đức Mạnh</a></h5>
-                        <small>Leader-Team</small>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-2.2 mt-md-0 mt-5">
-                <div class="team-block-single">
-                    <div class="team-grids">
-                        <a href="#team-single">
-                            <img src="~/Public/Image/th (2).jfif" class="img-fluid" alt="" style="width: 240px; height: 166px">
-                            <div class="team-info">
-                                <div class="social-icons-section">
-                                    <a class="fac" href="#facebook">
-                                        <span class="fa fa-facebook"></span>
-                                    </a>
-                                    <a class="twitter mx-2" href="#twitter">
-                                        <span class="fa fa-twitter"></span>
-                                    </a>
-                                    <a class="google" href="#google-plus">
-                                        <span class="fa fa-google-plus"></span>
-                                    </a>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="team-bottom-block p-4">
-                        <h5 class="member mb-1"><a href="#team" style="font-size: 1rem">Lê Đức Phúc</a></h5>
-                        <small>Manager of Company</small>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>*@
-@Html.Action("feedback", "Services")
-<!-- //customers section -->
-<style type="text/css">
-    
-
-    .carousel {
-        margin-bottom: 0;
-        padding: 0 40px 30px 40px;
-    }
-
-    .carousel-control {
-        left: -12px;
-        height: 40px;
-        width: 40px;
-        background: none repeat scroll 0 0 #222222;
-        border: 4px solid #FFFFFF;
-        border-radius: 23px 23px 23px 23px;
-        margin-top: 90px;
-    }
-
-        .carousel-control.right {
-            right: -12px;
-        }
-
-    .carousel-indicators {
-        right: 50%;
-        top: auto;
-        bottom: -10px;
-        margin-right: -19px;
-    }
-        /* The colour of the indicators */
-        .carousel-indicators li {
-            background: #cecece;
-        }
-
-        .carousel-indicators .active {
-            background: #428bca;
-        }
-</style>
-<link rel="stylesheet" href="~/Content/Manh/assets/css/abc.min.css">
-<script src="~/Content/Manh/assets/js/abcd.min.js"></script>
-<script src="~/Content/Manh/assets/js/abc.min.js"></script>
-<script type="text/javascript">
-    $(document).ready(function () {
-        $('#Carousel').carousel({
-            interval: 5000
-        }
-        )
-    }
-    );
-
-</script>
