--- a/Content/Duc/_search.css
+++ b/Content/Duc/_search.css
@@ -1,4 +1,21 @@
-﻿.modal-dialog {
+﻿.select2-container--default .select2-selection--multiple .select2-selection__choice {
+    color: black !important;
+}
+
+.select2-container--default.select2-container--focus .select2-selection--multiple, .select2-container--default .select2-selection--multiple {
+    height: 40px;
+    min-height: 40px;
+}
+
+.dropdown-menu {
+    padding: 0px !important;
+}
+
+.modal-backdrop {
+    opacity: 0.7 !important;
+}
+
+.modal-dialog {
     max-width: 100%;
     margin: 0;
     top: 0;
@@ -9,31 +26,14 @@
     display: flex;
 }
 
-.select2-container--default .select2-selection--multiple .select2-selection__choice {
-    color: black !important;
-}
-
-.select2-container--default.select2-container--focus .select2-selection--multiple, .select2-container--default .select2-selection--multiple {
-    height: 40px;
-    min-height: 40px;
+.select2-container {
+    width: 100% !important
 }
 
 .selection span {
-    padding-top: 1px !important;
-}
-
-.dropdown-menu {
-    padding: 0px !important;
+    padding-top: 5px !important;
 }
 
 .show {
-    top: 5px !important;
+    top: 0px !important;
 }
-.modal-backdrop {
-    opacity: 0.8 !important;
-}
-/*
-    ================================
-        Best Viewed In Full Page
-    ================================
-*/
