--- a/Views/Customer2/MyProfileCustomer.cshtml
+++ b/Views/Customer2/MyProfileCustomer.cshtml
@@ -1,11 +1,9 @@
 ﻿
 @model _ExcellOn_.Models.Customer
 @{
-    Layout = "~/Views/Shared/HomePage.cshtml";
+    Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
 
-@*@if (Model.Customer_UserName != null && Model.Customer_Password != null)
-    {*@
 <div class="main-content">
 
     <div class="header pb-8 pt-5 pt-lg-8 d-flex align-items-center" style="min-height: 600px; background-image: url('/Public/Image/city.jpg'); background-size: cover; background-position: center top;">
@@ -13,8 +11,8 @@
         <div class="container-fluid d-flex align-items-center">
             <div class="row">
                 <div class="col-lg-12 col-md-12">
-                    <h1 class="display-3 text-white" style="font-weight: 500">Hello @Model.Customer_UserName</h1>
-                    <p class="text-white mt-0 mb-5" style="font-size: 1.5rem">This is your profile page. You can see the progress you've made with your work and manage your profile or change it</p>
+                    <h1 class="display-3 text-white" style="font-weight: 600;font-size: 3.3rem">Hello @Model.Customer_UserName</h1>
+                    <p class="text-white mt-0 mb-5">This is your profile page. You can see the progress you've made with your work and manage your profile or change it</p>
                 </div>
             </div>
         </div>
