--- a/Views/Customer2/OrderListIndex.cshtml
+++ b/Views/Customer2/OrderListIndex.cshtml
@@ -2,12 +2,11 @@
 @model List<_ExcellOn_.Models.Order>
 @{
     ViewBag.Title = "OrderListIndex";
-    Layout = "~/Views/Shared/HomePage.cshtml";
+    Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
 
 @section css{
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -31,87 +30,93 @@
 
 
 <div class="container-xl" style="margin-top: 80px;margin-bottom: 80px">
-    <div class="table-responsive">
-        <div class="table-wrapper">
-            <div class="table-title">
-                <div class="row">
-                    <div class="col-sm-4">
-                        <h2>Order <b>List</b></h2>
-                    </div>
-                    <div class="col-sm-8">
-                        <a href="/Customer2/OrderListIndex" class="btn btn-primary">
-                            <i class="material-icons">&#xE863;</i> <span>
-                                Refresh
-                                List
-                            </span>
-                        </a>
-                    </div>
+    <div class="card">
+        <div class="card-header bg-primary pt-2 pb-2">
+            <div class="row">
+                <div class="col-md-3">
+                    <h1 style="color:white;margin-bottom:0px">
+                        Order List
+                    </h1>
+                </div>
+                <div class="col-md-9">
+                    <a href="/Customer2/OrderListIndex" style="float: right" class="btn btn-primary">
+                        <span>
+                            <i class="fa fa-spin" style="margin-right: 10px">&#xE863;</i>
+                            <span> Refresh </span>
+                        </span>
+                    </a>
                 </div>
             </div>
+            
+        </div>
+        <div class="card-body">
+            <div class="row">
+                <div class="col-md-12">
+                    <table id="table_OrderList" class="table table-striped table-hover">
+                        <thead class="thead-light">
+                            <tr>
+                                <th style="font-size: 0.875rem">Order Code</th>
+                                <th style="font-size: 0.875rem">Date Create</th>
+                                <th style="font-size: 0.875rem">Description</th>
+                                <th style="font-size: 0.875rem">Total Cost</th>
+                                <th style="font-size: 0.875rem">Status</th>
+                                <th style="font-size: 0.875rem">Detail</th>
+                        </thead>
 
-            <table id="table_OrderList" class="table table-striped table-hover">
-                <thead class="thead-light">
-                    <tr>
-                        <th style="font-size: 0.875rem">Order Code</th>
-                        <th style="font-size: 0.875rem">Date Create</th>
-                        <th style="font-size: 0.875rem">Description</th>
-                        <th style="font-size: 0.875rem">Total Cost</th>
-                        <th style="font-size: 0.875rem">Status</th>
-                        <th style="font-size: 0.875rem">Detail</th>
-                </thead>
+                        <tbody class="list">
+                            @foreach (var item in Model)
+                            {
+                                <tr style="height: 60px">
+                                    <td>@item.Id</td>
+                                    <td>@item.Order_DateCreate</td>
+                                    <td>@item.Order_Description</td>
+                                    <td>$ @item.Order_TotalCost</td>
+                                    <td style="font-size: 0.8125rem">
+                                        @*<span class="status text-success">&bull;</span>@item.OrderDetail_Status*@
+                                        @if (item.Order_Status == 0)
+                                        {
+                                            <span class="badge badge-dot mr-4">
+                                                <i class="bg-primary"></i>
+                                                <span style="font-size: 14px"> Pending </span>
+                                            </span>
+                                        }
+                                        else if (item.Order_Status == 1)
+                                        {
+                                            <span class="badge badge-dot mr-4">
+                                                <i class="bg-warning"></i>
+                                                <span style="font-size: 14px"> Started </span>
+                                            </span>
+                                        }
+                                        else if (item.Order_Status == 2)
+                                        {
+                                            <span class="badge badge-dot mr-4">
+                                                <i class="bg-success"></i>
+                                                <span style="font-size: 14px"> Completed </span>
+                                            </span>
+                                        }
+                                        else
+                                        {
+                                            <span class="badge badge-dot mr-4">
+                                                <i class="bg-dark"></i>
+                                                <span style="font-size: 14px"> Deleted </span>
+                                            </span>
+                                        }
+                                    </td>
+                                    <td>
+                                        <a href="@Url.Action("OrderDetailIndex","Customer2", new { id = item.Id })" class="view" title="View Details" data-toggle="tooltip">
+                                            <i class="material-icons">&#xE5C8;</i>
+                                        </a>
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
 
-                <tbody class="list">
-                    @foreach (var item in Model)
-                    {
-                        <tr style="height: 60px">
-                            <td>@item.Id</td>
-                            <td>@item.Order_DateCreate</td>
-                            <td>@item.Order_Description</td>
-                            <td>$ @item.Order_TotalCost</td>
-                            <td style="font-size: 0.8125rem">
-                                @*<span class="status text-success">&bull;</span>@item.OrderDetail_Status*@
-                                @if (item.Order_Status == 0)
-                                {
-                                    <span class="badge badge-dot mr-4">
-                                        <i class="bg-primary"></i>
-                                        <span style="font-size: 14px"> Pending </span>
-                                    </span>
-                                }
-                                else if (item.Order_Status == 1)
-                                {
-                                    <span class="badge badge-dot mr-4">
-                                        <i class="bg-warning"></i>
-                                        <span style="font-size: 14px"> Started </span>
-                                    </span>
-                                }
-                                else if (item.Order_Status == 2)
-                                {
-                                    <span class="badge badge-dot mr-4">
-                                        <i class="bg-success"></i>
-                                        <span style="font-size: 14px"> Completed </span>
-                                    </span>
-                                }
-                                else
-                                {
-                                    <span class="badge badge-dot mr-4">
-                                        <i class="bg-dark"></i>
-                                        <span style="font-size: 14px"> Deleted </span>
-                                    </span>
-                                }
-                            </td>
-                            <td>
-                                <a href="@Url.Action("OrderDetailIndex","Customer2", new { id = item.Id })" class="view" title="View Details" data-toggle="tooltip">
-                                    <i class="material-icons">&#xE5C8;</i>
-                                </a>
-                            </td>
-                        </tr>
-                    }
-                </tbody>
-            </table>
+            </div>
         </div>
     </div>
-
-
+    
 </div>
 
 @section js{
@@ -133,8 +138,6 @@
         /*< !--Hiển thị chữ view detail trên button mũi tên-- >*/
         $('[data-toggle="tooltip"]').tooltip();
     </script>
-
-    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.js"></script>
 }
 
 
