--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,9 +1,342 @@
-﻿
+﻿@using _ExcellOn_.Models
+@{
+    MyCompany myCompany = ViewBag.myCompany;
+    List<Service> list_service = ViewBag.list_service;
+    List<Staff> list_staff = ViewBag.list_staff;
+    List<OrderDetail> list_orderdetail = ViewBag.list_orderdetail;
+    List<Customer> list_customer = ViewBag.list_customer;
+}
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/HomePage.cshtml";
+    Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
 
+<section class="w3l-banner pt-5">
+    <div class="container">
+        <div class="row">
+            <div class="col-xl-6 banner-left">
+                <h3 class="text-white mb-3 title">
+                    We Offer Best Quality<br>
+                    Customer <span class="type-js"><span class="text-js"> Service! </span></span>
+                </h3>
+                <p class="lead text-white">
+                    @myCompany.MyTarget
+                </p>
+                <div class="mt-5">
+                    <a class="btn btn-style-white" href="#">View Our Service</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- //banner section -->
+<!-- about -->
+<section class="w3l-features-photo-7 py-5">
+    <div class="container py-md-5 py-4">
+        <div class="row w3l-features-photo-7_top">
+            <div class="col-lg-6 w3l-features-photo-7_top-left pr-lg-5">
+                <h4 class="title-style mb-2">@myCompany.Title</h4>
+                <p>
+                    Orci urna. In et augue ornare,
+                    tempor massa in,
+                    luctus sapien.
+                    Proin a diam et dui fermentum dolor molestie vel id neque. Donec sed tempus enim, a congue
+                    risus. Pellen
+                    tesqu.
+                </p>
+                <div class="row feat_top mt-4 pt-lg-3">
+                    <div class="col-6 w3l-features-photo-7-box">
+                        <i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
+                        <h5 class="w3l-feature-text my-2">Our Mission</h5>
+                        <p>@myCompany.MyMission</p>
+                    </div>
+                    <div class="col-6 w3l-features-photo-7-box">
+                        <i class="fa fa-angellist" aria-hidden="true"></i>
+                        <h5 class="w3l-feature-text my-2">Our Vision</h5>
+                        <p>@myCompany.MyVision</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 w3l-features-photo-7_top-right mt-lg-0 mt-sm-5 mt-4">
+                <img src="@myCompany.Image" class="img-responsive" alt="" />
+            </div>
+        </div>
+    </div>
+</section>
+<!-- //about -->
+<!-- services section -->
+<section class="w3l-content-11-main">
+    <div class="content-design-11 py-5">
+        <div class="container py-md-5 py-4">
+            <div class="row justify-content-center">
+                <div class="col-md-8">
+                    <div class="section-heading text-center mb-sm-5 mb-4">
+                        <h3 class="title-style mb-2">We Provide Best Services</h3>
+                        <p class="lead">
+                            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque,
+                            eaque ipsa quae ab illo inventore.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="content-sec-11">
+                <div class="row">
+                    @foreach (var service in list_service)
+                    {
 
 
-@Html.Action("Main")
+                        <div class="col-lg-4">
+                            <div class="services-single d-flex p-sm-5 p-4" style="min-height: 330px">
+                                <div class="service-icon mr-sm-4 mr-3">
+                                    @if (service.Service_Name == "Tele Marketing")
+                                    {
+                                        <span class="fa fa-headphones" aria-hidden="true"></span>
+                                    }
+                                    else if (service.Service_Name == "In-bound")
+                                    {
+                                        <span class="fa fa-bullhorn" aria-hidden="true"></span>
+                                    }
+                                    else if (service.Service_Name == "Out-bound")
+                                    {
+                                        <span class="fa fa-volume-control-phone" aria-hidden="true"></span>
+                                    }
+
+                                </div>
+                                <div class="services-content">
+                                    <h5 style="min-height: 80px"><a href="services.html">@service.Service_Name - Service</a></h5>
+                                    <p style="min-height: 150px">
+                                        @service.Service_Description.Substring(0, 100)
+                                    </p>
+                                    <a href="#services" class="btn read-button d-flex align-items-center mt-4 p-0">
+                                        Read
+                                        More<i class="fa fa-angle-double-right ml-1" aria-hidden="true"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    }
+
+                </div>
+
+                <div class="mt-md-5 mt-4 text-center">
+                    <a class="btn btn-style-white btn-style-primary" href="services.html">Learn More Services</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- //services section -->
+<!-- stats -->
+<section class="w3_stats py-5" id="stats">
+    <div class="container py-md-5 py-4">
+        <div class="w3-stats text-center py-md-4">
+            <div class="row justify-content-center">
+                <div class="col-md-8">
+                    <div class="section-heading text-center mb-sm-5 mb-4">
+                        <h3 class="title-style text-white mb-2">Our Amazing Statistics</h3>
+                        <p class="lead text-white">
+                            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque,
+                            eaque ipsa quae ab illo inventore.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-4">
+                <div class="col-md-3 col-6">
+                    <div class="counter">
+                        <span class="fa fa-users"></span>
+                        <div class="timer count-title count-number mt-3" data-to="@list_staff.Count" data-speed="500"></div>
+                        <p class="count-text">Employees</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-6">
+                    <div class="counter">
+                        <span class="fa fa-smile-o"></span>
+                        <div class="timer count-title count-number mt-3" data-to="8386" data-speed="500"></div>
+                        <p class="count-text">Statisfication</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-6 mt-md-0 mt-5">
+                    <div class="counter">
+                        <span class="fa fa-phone"></span>
+                        <div class="timer count-title count-number mt-3" data-to="@list_customer.Count" data-speed="500"></div>
+                        <p class="count-text">Customer Call</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-6 mt-md-0 mt-5">
+                    <div class="counter">
+                        <span class="fa fa-trophy"></span>
+                        <div class="timer count-title count-number mt-3" data-to="@list_orderdetail.Count" data-speed="500"></div>
+                        <p class="count-text"> Order Service</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- //stats -->
+<!-- customers section -->
+<section class="w3l-customer-block py-5">
+    <div class="container py-md-5 py-4">
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <div class="section-heading text-center mb-sm-5 mb-4">
+                    <h3 class="title-style mb-2">Testimonials</h3>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            @foreach (var cus in list_customer.Take(3))
+            {
+                <div class="col-md-4 mt-md-0 mt-5">
+                    <div class="customer-single pr-lg-4">
+                        <blockquote style="min-height: 120px">
+                            @cus.Customer_Comment.Substring(0,100) .....
+                        </blockquote>
+                        <div class="customer-img d-flex align-items-center mt-4">
+                            <img src="@cus.Customer_Avatar" style="width:100px;height: 100px" class="img-fluid mr-3" alt="" />
+                            <div class="customer-info">
+                                <h6>@cus.Customer_Name</h6>
+                                <small class="mb-0">@cus.Customer_Email</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            }
+        </div>
+    </div>
+</section>
+<!-- //customers section -->
+<!-- blog section -->
+<div class="w3l-grids-block-5 py-5">
+    <div class="container py-md-5 py-4">
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <div class="section-heading text-center mb-sm-5 mb-4">
+                    <h3 class="title-style mb-2">Our Latest Blog</h3>
+                    <p class="lead">
+                        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque,
+                        eaque ipsa quae ab illo inventore.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-4 col-sm-6">
+                <div class="blog-card-single">
+                    <div class="grids5-info">
+                        <a href="#blog"><img src="/Content/Template/assets/images/blog1.jpg" alt="" /></a>
+                        <div class="blog-info">
+                            <h5>November 3, 2020 - <a href="blog-single">New</a></h5>
+                            <h4><a href="#blog">Donec sed teus enime</a></h4>
+                            <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <ul class="admin-list d-flex align-items-center justify-content-between">
+                            <li>
+                                <a href="#blog">
+                                    <span class="fa fa-user-circle"
+                                          aria-hidden="true"></span>
+                                    Admin
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#blog">
+                                    <span class="fa fa-comments" aria-hidden="true"></span>7
+                                    Comments
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-6 mt-sm-0 mt-4">
+                <div class="blog-card-single">
+                    <div class="grids5-info">
+                        <a href="#blog"><img src="/Content/Template/assets/images/blog3.jpg" alt="" /></a>
+                        <div class="blog-info">
+                            <h5>November 6, 2020 - <a href="blog-single">New</a></h5>
+                            <h4><a href="#blog">It's enim ad minim aute</a></h4>
+                            <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <ul class="admin-list d-flex align-items-center justify-content-between">
+                            <li>
+                                <a href="#blog">
+                                    <span class="fa fa-user-circle"
+                                          aria-hidden="true"></span>
+                                    Admin
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#blog">
+                                    <span class="fa fa-comments" aria-hidden="true"></span>3
+                                    Comments
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-6 mt-lg-0 mt-4">
+                <div class="blog-card-single">
+                    <div class="grids5-info">
+                        <a href="#blog"><img src="/Content/Template/assets/images/blog2.jpg" alt="" /></a>
+                        <div class="blog-info">
+                            <h5>November 7, 2020 - <a href="blog-single">New</a></h5>
+                            <h4><a href="#blog">Ullamco laboris nisi uts</a></h4>
+                            <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <ul class="admin-list d-flex align-items-center justify-content-between">
+                            <li>
+                                <a href="#blog">
+                                    <span class="fa fa-user-circle"
+                                          aria-hidden="true"></span>
+                                    Admin
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#blog">
+                                    <span class="fa fa-comments" aria-hidden="true"></span>5
+                                    Comments
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- //blog section -->
+<!-- call section -->
+<section class="w3l-call-to-action-6">
+    <div class="call-sec-style py-5">
+        <div class="container py-md-4 py-3">
+            <div class="row align-items-center">
+                <div class="col-md-5 col-float-lt">
+                    <h3 class="title-big">Contact us now!</h3>
+                    <p>For new era, EXCELL ON SERVICE</p>
+                </div>
+                <div class="col-md-7 float-rt text-md-right align-items-center mt-md-0 mt-4">
+                    <ul class="buttons">
+                        <li class="phone-sec">
+                            <span class="fa fa-volume-control-phone mr-1"
+                                  aria-hidden="true"></span>
+                            <a class="call-style-w3" href="tel:+1(23) 456 789 0000">+(84) 961 503 893</a>
+                        </li>
+                        <li class="green">Or</li>
+                        <li>
+                            <a href="#" class="btn btn-style-white btn-style-primary">Get in touch</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- //call section -->
