--- a/Views/Services/detailservice.cshtml
+++ b/Views/Services/detailservice.cshtml
@@ -69,8 +69,8 @@
     <div class="container pb-md-5 pb-4">
         <div class="row align-items-center justify-content-between">
             <div class="col-lg-6 about-2-secs-left pr-lg-5">
-                <h3 class="title-style mb-sm-3 mb-2">@Model.Service_Name</h3>
-                <p>
+                <h3 class="title-style mb-sm-3 mb-2" style="font-size: 2.6rem; font-weight: 700">@Model.Service_Name</h3>
+                <p style="color:black;font-size: 1.3rem">
                     @Model.Service_Description
                 </p>
                 <ul class="list-about-2 mt-sm-4 mt-3">
@@ -97,7 +97,7 @@
                 </div>
             </div>
             <div class="col-lg-6 about-2-secs-right mt-lg-0 mt-5">
-                <img src="~/Content/Manh/assets/images/about2.jpg" alt="" class="img-fluid img-responsive" />
+                <img src="~/Content/Manh/assets/images/about2.jpg" alt="" style="min-height: 500px" class="img-fluid img-responsive" />
             </div>
         </div>
     </div>
