--- a/Views/Shared/_HeaderLayout.cshtml
+++ b/Views/Shared/_HeaderLayout.cshtml
@@ -59,17 +59,17 @@
                                     <h6 class="text-overflow m-0">Welcome!</h6>
                                 </div>
                                 <a class="dropdown-item" href="@Url.Action("MyProfileCustomer","Customer2")">
-                                    <i class="ni ni-single-02"></i>
+                                    <i class="fa fa-user"></i>
                                     <span>My profile</span>
                                 </a>
                                 <a class="dropdown-item" href="@Url.Action("OrderListIndex","Customer2")">
-                                    <i class="ni ni-shop"></i>
+                                    <i class="fa fa-first-order"></i>
                                     <span>My Order</span>
                                 </a>
 
                                 <div class="dropdown-divider"></div>
                                 <a onclick="return _Logout()" class="dropdown-item">
-                                    <i class="ni ni-user-run"></i>
+                                    <i class="fa fa-sign-out"></i>
                                     <span>Logout</span>
                                 </a>
                             </div>
@@ -90,7 +90,7 @@
                 </ul>
             </div>
             <!-- toggle switch for light and dark theme -->
-            <div class="cont-ser-position">
+            <div class="cont-ser-position" style="padding-bottom:10px">
                 <nav class="navigation">
                     <div class="theme-switch-wrapper">
                         <label class="theme-switch" for="checkbox">
