--- a/Views/Customer2/OrderIndex.cshtml
+++ b/Views/Customer2/OrderIndex.cshtml
@@ -73,8 +73,8 @@
                                 <th>Your service </th>
                                 <th>Interval</th>
                                 <th>Employee</th>
-                                <th>Price employee/day (&euro;)</th>
-                                <th>Subtotal  (&euro;)</th>
+                                <th>Price employee/day ($)</th>
+                                <th>Subtotal  ($)</th>
                                 <th></th>
                             </tr>
                             @if (Model != null)
