--- a/Views/Shared/_FooterLayout.cshtml
+++ b/Views/Shared/_FooterLayout.cshtml
@@ -8,37 +8,37 @@
                         <div class="col-md-3 col-6 footer-list-29">
                             <ul>
                                 <h6 class="footer-title-29">Company</h6>
-                                <li><a href="services.html">About Our Services</a></li>
-                                <li><a href="#call-center">Our Projects</a></li>
-                                <li><a href="#blog">View Our Blog</a></li>
-                                <li><a href="about.html">Check Our Careers</a></li>
+                                <li><a href="#">About Our Services</a></li>
+                                <li><a href="#">Our Projects</a></li>
+                                <li><a href="#">View Our Blog</a></li>
+                                <li><a href="#">Check Our Careers</a></li>
                             </ul>
                         </div>
                         <div class="col-md-3 col-6 footer-list-29">
                             <ul>
                                 <h6 class="footer-title-29">Quick Links</h6>
-                                <li><a href="#call-center">Management</a></li>
-                                <li><a href="services.html">Department Services</a></li>
-                                <li><a href="#call-center">Make Appointment</a></li>
-                                <li><a href="about.html">Our Business Growth</a></li>
+                                <li><a href="#">Management</a></li>
+                                <li><a href="#">Department Services</a></li>
+                                <li><a href="#">Make Appointment</a></li>
+                                <li><a href="#">Our Business Growth</a></li>
                             </ul>
                         </div>
                         <div class="col-md-3 col-6 footer-list-29 mt-md-0 mt-4">
                             <ul>
                                 <h6 class="footer-title-29">Support</h6>
-                                <li><a href="#call-center">Live Chart</a></li>
-                                <li><a href="#call-center">Faq's</a></li>
-                                <li><a href="#call-center"> Support</a></li>
-                                <li><a href="#call-center">Terms of Service</a></li>
+                                <li><a href="#">Live Chart</a></li>
+                                <li><a href="#">Faq's</a></li>
+                                <li><a href="#"> Support</a></li>
+                                <li><a href="#">Terms of Service</a></li>
                             </ul>
                         </div>
                         <div class="col-md-3 col-6 footer-list-29 mt-md-0 mt-4">
                             <h6 class="footer-title-29">More Info</h6>
                             <ul>
-                                <li><a href="#privacy">Privacy Policy</a></li>
-                                <li><a href="#terms"> Terms of Service</a></li>
-                                <li><a href="contact.html">Contact us</a></li>
-                                <li><a href="#support"> Support</a></li>
+                                <li><a href="#">Privacy Policy</a></li>
+                                <li><a href="#"> Terms of Service</a></li>
+                                <li><a href="#">Contact us</a></li>
+                                <li><a href="#"> Support</a></li>
                             </ul>
                         </div>
                     </div>
@@ -48,18 +48,18 @@
                     <ul>
                         <li class="d-flex align-items-center py-2">
                             <i class="fa fa-map-marker mr-2"
-                               aria-hidden="true"></i>10001, 5th Avenue, USA
+                               aria-hidden="true"></i>So 8 Ton That Thuyet
                         </li>
                         <li class="d-flex align-items-center py-2">
                             <i class="fa fa-phone mr-2"
                                aria-hidden="true"></i><a href="tel:+12 23456790">
-                                +12
-                                23456790
+                                +84
+                                961503893
                             </a>
                         </li>
                         <li class="d-flex align-items-center py-2">
                             <i class="fa fa-envelope mr-2"
-                               aria-hidden="true"></i><a href="mailto:info@example.com">info@example.com</a>
+                               aria-hidden="true"></i><a href="ExcellOn@example.com">ExcellOn@example.com</a>
                         </li>
                     </ul>
                 </div>
@@ -73,8 +73,8 @@
     <div class="container">
         <div class="row bottom-copies">
             <p class="col-lg-8 copy-footer-29">
-                © 2020 Call Center. All rights reserved. Design by <a href="https://w3layouts.com/" target="_blank">
-                    W3Layouts
+                © 2021 Excell On Center. All rights reserved. Design by <a href="#">
+                    Excell On
                 </a>
             </p>
             <div class="col-lg-4 text-right">
